openapi/docs/v3/docs/BundleDataUnlinkingBatchApi.md
# libica.openapi.v3.BundleDataUnlinkingBatchApi

All URIs are relative to */ica/rest*

Method | HTTP request | Description
------------- | ------------- | -------------
[**create_bundle_data_unlinking_batch**](BundleDataUnlinkingBatchApi.md#create_bundle_data_unlinking_batch) | **POST** /api/bundles/{bundleId}/dataUnlinkingBatch | Create a bundle data unlinking batch.
[**get_bundle_data_unlinking_batch**](BundleDataUnlinkingBatchApi.md#get_bundle_data_unlinking_batch) | **GET** /api/bundles/{bundleId}/dataUnlinkingBatch/{batchId} | Retrieve a bundle data unlinking batch.
[**get_bundle_data_unlinking_batch_item**](BundleDataUnlinkingBatchApi.md#get_bundle_data_unlinking_batch_item) | **GET** /api/bundles/{bundleId}/dataUnlinkingBatch/{batchId}/items/{itemId} | Retrieve a bundle data unlinking batch item.
[**get_bundle_data_unlinking_batch_items**](BundleDataUnlinkingBatchApi.md#get_bundle_data_unlinking_batch_items) | **GET** /api/bundles/{bundleId}/dataUnlinkingBatch/{batchId}/items | Retrieve a list of bundle data unlinking batch items.


# **create_bundle_data_unlinking_batch**
> BundleDataUnlinkingBatch create_bundle_data_unlinking_batch(bundle_id, create_bundle_data_unlinking_batch)

Create a bundle data unlinking batch.

### Example

* Bearer (JWT) Authentication (JwtAuth):
* Api Key Authentication (ApiKeyAuth):

```python
import libica.openapi.v3
from libica.openapi.v3.models.bundle_data_unlinking_batch import BundleDataUnlinkingBatch
from libica.openapi.v3.models.create_bundle_data_unlinking_batch import CreateBundleDataUnlinkingBatch
from libica.openapi.v3.rest import ApiException
from pprint import pprint

# Defining the host is optional and defaults to /ica/rest
# See configuration.py for a list of all supported configuration parameters.
configuration = libica.openapi.v3.Configuration(
    host = "/ica/rest"
)

# The client must configure the authentication and authorization parameters
# in accordance with the API server security policy.
# Examples for each auth method are provided below, use the example that
# satisfies your auth use case.

# Configure Bearer authorization (JWT): JwtAuth
configuration = libica.openapi.v3.Configuration(
    access_token = os.environ["BEARER_TOKEN"]
)

# Configure API key authorization: ApiKeyAuth
configuration.api_key['ApiKeyAuth'] = os.environ["API_KEY"]

# Uncomment below to setup prefix (e.g. Bearer) for API key, if needed
# configuration.api_key_prefix['ApiKeyAuth'] = 'Bearer'

# Enter a context with an instance of the API client
with libica.openapi.v3.ApiClient(configuration) as api_client:
    # Create an instance of the API class
    api_instance = libica.openapi.v3.BundleDataUnlinkingBatchApi(api_client)
    bundle_id = 'bundle_id_example' # str | 
    create_bundle_data_unlinking_batch = libica.openapi.v3.CreateBundleDataUnlinkingBatch() # CreateBundleDataUnlinkingBatch | 

    try:
        # Create a bundle data unlinking batch.
        api_response = api_instance.create_bundle_data_unlinking_batch(bundle_id, create_bundle_data_unlinking_batch)
        print("The response of BundleDataUnlinkingBatchApi->create_bundle_data_unlinking_batch:\n")
        pprint(api_response)
    except Exception as e:
        print("Exception when calling BundleDataUnlinkingBatchApi->create_bundle_data_unlinking_batch: %s\n" % e)
```



### Parameters


Name | Type | Description  | Notes
------------- | ------------- | ------------- | -------------
 **bundle_id** | **str**|  | 
 **create_bundle_data_unlinking_batch** | [**CreateBundleDataUnlinkingBatch**](CreateBundleDataUnlinkingBatch.md)|  | 

### Return type

[**BundleDataUnlinkingBatch**](BundleDataUnlinkingBatch.md)

### Authorization

[JwtAuth](../README.md#JwtAuth), [ApiKeyAuth](../README.md#ApiKeyAuth)

### HTTP request headers

 - **Content-Type**: application/vnd.illumina.v3+json
 - **Accept**: application/problem+json, application/vnd.illumina.v3+json

### HTTP response details

| Status code | Description | Response headers |
|-------------|-------------|------------------|
**201** | The bundle data unlinking batch is successfully created. |  -  |
**0** | A problem occurred. |  -  |

[[Back to top]](#) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to Model list]](../README.md#documentation-for-models) [[Back to README]](../README.md)

# **get_bundle_data_unlinking_batch**
> BundleDataUnlinkingBatch get_bundle_data_unlinking_batch(bundle_id, batch_id)

Retrieve a bundle data unlinking batch.

### Example

* Bearer (JWT) Authentication (JwtAuth):
* Api Key Authentication (ApiKeyAuth):

```python
import libica.openapi.v3
from libica.openapi.v3.models.bundle_data_unlinking_batch import BundleDataUnlinkingBatch
from libica.openapi.v3.rest import ApiException
from pprint import pprint

# Defining the host is optional and defaults to /ica/rest
# See configuration.py for a list of all supported configuration parameters.
configuration = libica.openapi.v3.Configuration(
    host = "/ica/rest"
)

# The client must configure the authentication and authorization parameters
# in accordance with the API server security policy.
# Examples for each auth method are provided below, use the example that
# satisfies your auth use case.

# Configure Bearer authorization (JWT): JwtAuth
configuration = libica.openapi.v3.Configuration(
    access_token = os.environ["BEARER_TOKEN"]
)

# Configure API key authorization: ApiKeyAuth
configuration.api_key['ApiKeyAuth'] = os.environ["API_KEY"]

# Uncomment below to setup prefix (e.g. Bearer) for API key, if needed
# configuration.api_key_prefix['ApiKeyAuth'] = 'Bearer'

# Enter a context with an instance of the API client
with libica.openapi.v3.ApiClient(configuration) as api_client:
    # Create an instance of the API class
    api_instance = libica.openapi.v3.BundleDataUnlinkingBatchApi(api_client)
    bundle_id = 'bundle_id_example' # str | 
    batch_id = 'batch_id_example' # str | 

    try:
        # Retrieve a bundle data unlinking batch.
        api_response = api_instance.get_bundle_data_unlinking_batch(bundle_id, batch_id)
        print("The response of BundleDataUnlinkingBatchApi->get_bundle_data_unlinking_batch:\n")
        pprint(api_response)
    except Exception as e:
        print("Exception when calling BundleDataUnlinkingBatchApi->get_bundle_data_unlinking_batch: %s\n" % e)
```



### Parameters


Name | Type | Description  | Notes
------------- | ------------- | ------------- | -------------
 **bundle_id** | **str**|  | 
 **batch_id** | **str**|  | 

### Return type

[**BundleDataUnlinkingBatch**](BundleDataUnlinkingBatch.md)

### Authorization

[JwtAuth](../README.md#JwtAuth), [ApiKeyAuth](../README.md#ApiKeyAuth)

### HTTP request headers

 - **Content-Type**: Not defined
 - **Accept**: application/problem+json, application/vnd.illumina.v3+json

### HTTP response details

| Status code | Description | Response headers |
|-------------|-------------|------------------|
**200** | The bundle data unlinking batch is successfully retrieved. |  -  |
**0** | A problem occurred. |  -  |

[[Back to top]](#) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to Model list]](../README.md#documentation-for-models) [[Back to README]](../README.md)

# **get_bundle_data_unlinking_batch_item**
> BundleDataUnlinkingBatchItem get_bundle_data_unlinking_batch_item(bundle_id, batch_id, item_id)

Retrieve a bundle data unlinking batch item.

### Example

* Bearer (JWT) Authentication (JwtAuth):
* Api Key Authentication (ApiKeyAuth):

```python
import libica.openapi.v3
from libica.openapi.v3.models.bundle_data_unlinking_batch_item import BundleDataUnlinkingBatchItem
from libica.openapi.v3.rest import ApiException
from pprint import pprint

# Defining the host is optional and defaults to /ica/rest
# See configuration.py for a list of all supported configuration parameters.
configuration = libica.openapi.v3.Configuration(
    host = "/ica/rest"
)

# The client must configure the authentication and authorization parameters
# in accordance with the API server security policy.
# Examples for each auth method are provided below, use the example that
# satisfies your auth use case.

# Configure Bearer authorization (JWT): JwtAuth
configuration = libica.openapi.v3.Configuration(
    access_token = os.environ["BEARER_TOKEN"]
)

# Configure API key authorization: ApiKeyAuth
configuration.api_key['ApiKeyAuth'] = os.environ["API_KEY"]

# Uncomment below to setup prefix (e.g. Bearer) for API key, if needed
# configuration.api_key_prefix['ApiKeyAuth'] = 'Bearer'

# Enter a context with an instance of the API client
with libica.openapi.v3.ApiClient(configuration) as api_client:
    # Create an instance of the API class
    api_instance = libica.openapi.v3.BundleDataUnlinkingBatchApi(api_client)
    bundle_id = 'bundle_id_example' # str | 
    batch_id = 'batch_id_example' # str | 
    item_id = 'item_id_example' # str | 

    try:
        # Retrieve a bundle data unlinking batch item.
        api_response = api_instance.get_bundle_data_unlinking_batch_item(bundle_id, batch_id, item_id)
        print("The response of BundleDataUnlinkingBatchApi->get_bundle_data_unlinking_batch_item:\n")
        pprint(api_response)
    except Exception as e:
        print("Exception when calling BundleDataUnlinkingBatchApi->get_bundle_data_unlinking_batch_item: %s\n" % e)
```



### Parameters


Name | Type | Description  | Notes
------------- | ------------- | ------------- | -------------
 **bundle_id** | **str**|  | 
 **batch_id** | **str**|  | 
 **item_id** | **str**|  | 

### Return type

[**BundleDataUnlinkingBatchItem**](BundleDataUnlinkingBatchItem.md)

### Authorization

[JwtAuth](../README.md#JwtAuth), [ApiKeyAuth](../README.md#ApiKeyAuth)

### HTTP request headers

 - **Content-Type**: Not defined
 - **Accept**: application/problem+json, application/vnd.illumina.v3+json

### HTTP response details

| Status code | Description | Response headers |
|-------------|-------------|------------------|
**200** | The bundle data unlinking batch item is successfully retrieved. |  -  |
**0** | A problem occurred. |  -  |

[[Back to top]](#) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to Model list]](../README.md#documentation-for-models) [[Back to README]](../README.md)

# **get_bundle_data_unlinking_batch_items**
> BundleDataUnlinkingBatchItemPagedList get_bundle_data_unlinking_batch_items(bundle_id, batch_id, status=status, page_offset=page_offset, page_token=page_token, page_size=page_size, sort=sort)

Retrieve a list of bundle data unlinking batch items.

### Example

* Bearer (JWT) Authentication (JwtAuth):
* Api Key Authentication (ApiKeyAuth):

```python
import libica.openapi.v3
from libica.openapi.v3.models.bundle_data_unlinking_batch_item_paged_list import BundleDataUnlinkingBatchItemPagedList
from libica.openapi.v3.rest import ApiException
from pprint import pprint

# Defining the host is optional and defaults to /ica/rest
# See configuration.py for a list of all supported configuration parameters.
configuration = libica.openapi.v3.Configuration(
    host = "/ica/rest"
)

# The client must configure the authentication and authorization parameters
# in accordance with the API server security policy.
# Examples for each auth method are provided below, use the example that
# satisfies your auth use case.

# Configure Bearer authorization (JWT): JwtAuth
configuration = libica.openapi.v3.Configuration(
    access_token = os.environ["BEARER_TOKEN"]
)

# Configure API key authorization: ApiKeyAuth
configuration.api_key['ApiKeyAuth'] = os.environ["API_KEY"]

# Uncomment below to setup prefix (e.g. Bearer) for API key, if needed
# configuration.api_key_prefix['ApiKeyAuth'] = 'Bearer'

# Enter a context with an instance of the API client
with libica.openapi.v3.ApiClient(configuration) as api_client:
    # Create an instance of the API class
    api_instance = libica.openapi.v3.BundleDataUnlinkingBatchApi(api_client)
    bundle_id = 'bundle_id_example' # str | 
    batch_id = 'batch_id_example' # str | 
    status = ['status_example'] # List[str] | The statuses to filter on. (optional)
    page_offset = 'page_offset_example' # str | [only use with offset-based paging]<br>The amount of rows to skip in the result. Ideally this is a multiple of the size parameter. Offset-based pagination has a result limit of 200K rows and does not guarantee unique results across pages (optional)
    page_token = 'page_token_example' # str | [only use with cursor-based paging]<br>The cursor to get subsequent results. The value to use is returned in the result when using cursor-based pagination. Cursor-based pagination guarantees complete and unique results across all pages. (optional)
    page_size = 'page_size_example' # str | [can be used with both offset- and cursor-based paging]<br>The amount of rows to return. Use in combination with the offset (when using offset-based pagination) or cursor (when using cursor-based pagination) parameter to get subsequent results (optional)
    sort = 'sort_example' # str | [only use with offset-based paging]<br>Which field to order the results by. The default order is ascending, suffix with ' desc' to sort descending (suffix ' asc' also works for ascending). Multiple values should be separated with commas. An example: \"?sort=sortAttribute1, sortAttribute2 desc\" (optional)

    try:
        # Retrieve a list of bundle data unlinking batch items.
        api_response = api_instance.get_bundle_data_unlinking_batch_items(bundle_id, batch_id, status=status, page_offset=page_offset, page_token=page_token, page_size=page_size, sort=sort)
        print("The response of BundleDataUnlinkingBatchApi->get_bundle_data_unlinking_batch_items:\n")
        pprint(api_response)
    except Exception as e:
        print("Exception when calling BundleDataUnlinkingBatchApi->get_bundle_data_unlinking_batch_items: %s\n" % e)
```



### Parameters


Name | Type | Description  | Notes
------------- | ------------- | ------------- | -------------
 **bundle_id** | **str**|  | 
 **batch_id** | **str**|  | 
 **status** | [**List[str]**](str.md)| The statuses to filter on. | [optional] 
 **page_offset** | **str**| [only use with offset-based paging]&lt;br&gt;The amount of rows to skip in the result. Ideally this is a multiple of the size parameter. Offset-based pagination has a result limit of 200K rows and does not guarantee unique results across pages | [optional] 
 **page_token** | **str**| [only use with cursor-based paging]&lt;br&gt;The cursor to get subsequent results. The value to use is returned in the result when using cursor-based pagination. Cursor-based pagination guarantees complete and unique results across all pages. | [optional] 
 **page_size** | **str**| [can be used with both offset- and cursor-based paging]&lt;br&gt;The amount of rows to return. Use in combination with the offset (when using offset-based pagination) or cursor (when using cursor-based pagination) parameter to get subsequent results | [optional] 
 **sort** | **str**| [only use with offset-based paging]&lt;br&gt;Which field to order the results by. The default order is ascending, suffix with &#39; desc&#39; to sort descending (suffix &#39; asc&#39; also works for ascending). Multiple values should be separated with commas. An example: \&quot;?sort&#x3D;sortAttribute1, sortAttribute2 desc\&quot; | [optional] 

### Return type

[**BundleDataUnlinkingBatchItemPagedList**](BundleDataUnlinkingBatchItemPagedList.md)

### Authorization

[JwtAuth](../README.md#JwtAuth), [ApiKeyAuth](../README.md#ApiKeyAuth)

### HTTP request headers

 - **Content-Type**: Not defined
 - **Accept**: application/problem+json, application/vnd.illumina.v3+json

### HTTP response details

| Status code | Description | Response headers |
|-------------|-------------|------------------|
**200** | The list of bundle data unlinking batch items is successfully retrieved. |  -  |
**0** | A problem occurred. |  -  |

[[Back to top]](#) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to Model list]](../README.md#documentation-for-models) [[Back to README]](../README.md)

